--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.footer-content h4 {
+    color: #fff;
+    margin-bottom: 1.5rem;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.footer-content li {
+    margin-bottom: 16px;
+}
+
+.footer-content li a {
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    transition: all .40s ease;
+}
+
+.footer-content li a:hover {
+ transform: translateY(-3px) translateX(-5px);
+ color: #fff;
+}
+
+.footer-content p{
+    color: #fff;
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+}
